--- a/.software/config.json
+++ b/.software/config.json
@@ -2,7 +2,7 @@
   "helloworld":{
     "title":"Hello World!",
     "file":"helloworld.snakeapp",
-    "url":"",
+    "url":"https://raw.githubusercontent.com/iam-py-test/snake_os/main/.software/helloworld.snakeapp",
     "desc":"A test app writen for SnakeOS",
     "perm":[]
   }
