--- a/.software/config.json
+++ b/.software/config.json
@@ -4,6 +4,7 @@
     "file":"helloworld.snakeapp",
     "url":"https://raw.githubusercontent.com/iam-py-test/snake_os/main/.software/helloworld.snakeapp",
     "desc":"A test app writen for SnakeOS",
-    "perm":[]
+    "perm":[],
+    "version":"1.0"
   }
 }
